--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.bundle.js -text -diff
 *.pbxproj -text
 lib-jitsi-meet.js -text -diff
+android/java_pid43952.hprof filter=lfs diff=lfs merge=lfs -text
