--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "react-native-video": "6.0.0-alpha.11",
     "react-native-watch-connectivity": "1.1.0",
     "react-native-webrtc": "124.0.0",
-    "react-native-webview": "13.8.7",
+    "react-native-webview": "^13.10.4",
     "react-native-youtube-iframe": "2.3.0",
     "react-redux": "7.2.9",
     "react-textarea-autosize": "8.3.0",
